--- a/login.html
+++ b/login.html
@@ -12,7 +12,7 @@
         <input type="text"  id="name"><br>
         <label for="name">Endereço:</label>
         <input type="text"  id="name">
-        <button> Enviar</button>
+        <button> Trocar</button>
     </form>
 
 
