--- a/login.html
+++ b/login.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <form>
-        <label for="name">Nome:</label>
+        <label for="name">Nome completo:</label>
         <input type="text"  id="name"><br>
         <label for="name">Endereço:</label>
         <input type="text"  id="name">
